# ngine

./: LICENCE  README.md  README_en.md
Docker/RG35XX/: CMakeLists.txt  build_rg35xx.bat  open_temp_session.bat
Docker/RG35XX/cmake/: ngn.pc.in
Docker/RG35XX/source/: config_flags.h  ngn.h  ngn_audio_clip.cpp  ngn_camera.h  ngn_defines.cpp  ngn_filesystem.h  ngn_image.cpp  ngn_input.cpp  ngn_math.cpp  ngn_music_clip.h  ngn_render.cpp  ngn_render.h  ngn_sound.h  ngn_sprite.cpp  ngn_sprite.h  ngn_toolbox.cpp  ngn_toolbox.h
Docker/RaspberryPI/ngn_sdk/: CMakeLists.txt
Docker/RaspberryPI/ngn_sdk/source/: ngn.cpp  ngn_camera.cpp  ngn_collisions.cpp  ngn_collisions.h  ngn_defines.h  ngn_disk.h  ngn_graphics.cpp  ngn_graphics.h  ngn_input.h  ngn_load.h  ngn_log.cpp  ngn_log.h  ngn_math.h  ngn_music_clip.cpp  ngn_resources.h  ngn_sound.cpp  ngn_system.cpp  ngn_system.h  ngn_text_layer.h  ngn_texture.h
Docs/: LICENSE.ngn.txt  changelog [ENG].txt  changelog.txt  (+1 more)
Examples/16_multiple_viewports/: CMakeLists.txt  Multiple_Viewports.cbp  data.pkg  debug_log.txt
Examples/16_multiple_viewports/source/: main.cpp
Examples/16_multiple_viewports/source/demo/: demo.cpp  demo.h
LibBuild/BuildNgineSDK/: CMakeLists.txt  build_sdk.bat
LibBuild/BuildNgineSDK/resource/: resource.rc  resource_d.rc
LibBuild/BuildNgineSDK/source/: ngn_audio_clip.cpp  ngn_canvas.cpp  ngn_collisions.cpp  ngn_collisions.h  ngn_defines.cpp  ngn_disk.h  ngn_graphics.h  ngn_image.cpp  ngn_load.cpp  ngn_load.h  ngn_math.cpp  ngn_math.h  ngn_music_clip.cpp  ngn_music_clip.h  ngn_system.cpp  ngn_system.h  ngn_toolbox.cpp  ngn_video.h  ngn_video_stream.cpp
LibBuild/Dockers/LinuxLTS/ngn_sdk/: CMakeLists.txt
LibBuild/Dockers/LinuxLTS/ngn_sdk/cmake/: ngn.pc.in
LibBuild/Dockers/LinuxLTS/ngn_sdk/source/: config_flags.h  ngn.cpp  ngn_audio_clip.cpp  ngn_audio_clip.h  ngn_collisions.cpp  ngn_collisions.h  ngn_disk.h  ngn_filesystem.cpp  ngn_graphics.cpp  ngn_input.h  ngn_load.cpp  ngn_math.cpp  ngn_math.h  ngn_music_clip.cpp  ngn_music_clip.h  ngn_render.h  ngn_resources.cpp  ngn_resources.h  ngn_sound.cpp  ngn_sprite.cpp  ngn_text_layer.cpp  ngn_texture.cpp  ngn_tiledbg.cpp  ngn_tiledbg.h  ngn_toolbox.cpp  ngn_toolbox.h  ngn_video.cpp  ngn_video_stream.h
LibBuild/Dockers/RG35XX/: CMakeLists.txt  Dockerfile.rg35xx  build_docker.bat  build_docker.sh  build_rg35xx.bat  build_rg35xx.sh  open_temp_session.bat
LibBuild/Dockers/RG35XX/cmake/: ngn-config.cmake.in
LibBuild/Dockers/RG35XX/source/: config_flags.h  ngn.h  ngn_camera.h  ngn_canvas.cpp  ngn_canvas.h  ngn_collisions.h  ngn_disk.cpp  ngn_filesystem.cpp  ngn_image.cpp  ngn_image.h  ngn_input.cpp  ngn_log.cpp  ngn_log.h  ngn_music_clip.cpp  ngn_render.h  ngn_resources.cpp  ngn_resources.h  ngn_sound.cpp  ngn_sound.h  ngn_sprite.cpp  ngn_sprite.h  ngn_system.cpp  ngn_system.h  ngn_text_layer.cpp  ngn_tiledbg.cpp  ngn_tiledbg.h  ngn_toolbox.h
LibBuild/Dockers/RG35XX/source/lodepng/: lodepng.h
LibBuild/Dockers/RPI4-CrossCompile/ngn_sdk/: CMakeLists.txt
LibBuild/Dockers/RPI4-CrossCompile/ngn_sdk/source/: ngn_defines.cpp  ngn_defines.h  ngn_graphics.h  ngn_input.h  ngn_render.cpp  ngn_sprite.h  ngn_texture.cpp  ngn_texture.h
LibBuild/InstallNgineSDK/: CMakeLists.txt  install_ngine_sdk.sh  update_ngine_lib.sh
LibBuild/InstallNgineSDK/cmake/: ngn-config.cmake.in
LibBuild/InstallNgineSDK/source/: config_flags.h  ngn.cpp  ngn.h  ngn_audio_clip.cpp  ngn_audio_clip.h  ngn_camera.cpp  ngn_camera.h  ngn_canvas.h  ngn_disk.h  ngn_filesystem.h  ngn_graphics.cpp  ngn_image.cpp  ngn_load.h  ngn_log.cpp  ngn_render.cpp  ngn_resources.cpp  ngn_sound.h  ngn_system.h  ngn_text_layer.cpp  ngn_text_layer.h  ngn_tiledbg.cpp  ngn_toolbox.cpp
RG35XX/BuildNgineSDK-Docker/: CMakeLists.txt  Dockerfile.aarch64  build_rg35xx.sh
RG35XX/BuildNgineSDK-Docker/cmake/: ngn-config.cmake.in  ngn.pc.in
RG35XX/BuildNgineSDK-Docker/source/: config_flags.h  ngn.cpp  ngn.h  ngn_audio_clip.cpp  ngn_audio_clip.h  ngn_camera.cpp  ngn_camera.h  ngn_canvas.cpp  ngn_canvas.h  ngn_collisions.cpp  ngn_collisions.h  ngn_defines.cpp  ngn_defines.h  ngn_disk.cpp  ngn_disk.h  ngn_filesystem.cpp  ngn_filesystem.h  ngn_graphics.cpp  ngn_graphics.h  ngn_image.cpp  ngn_image.h  ngn_input.cpp  ngn_input.h  ngn_load.cpp  ngn_load.h  ngn_log.cpp  ngn_log.h  ngn_math.cpp  ngn_math.h  ngn_music_clip.cpp  ngn_music_clip.h  ngn_render.cpp  ngn_render.h  ngn_resources.cpp  ngn_resources.h  ngn_sound.cpp  ngn_sound.h  ngn_sprite.cpp  ngn_sprite.h  ngn_system.cpp  (+9 more)
Templates/docker_Linux_LTS/00_Project_Template/project/: CMakeLists.txt  build_game.bat  build_game.sh
Templates/docker_Linux_LTS/00_Project_Template/project/scripts/: bundler.sh
Templates/docker_RG35XX/01_Sample_Project/project/: CMakeLists.txt  build_game.sh  data.pkg
Templates/docker_RG35XX/01_Sample_Project/project/data/: aim.spr  bg0.tbg
Templates/docker_RG35XX/01_Sample_Project/project/licences/: LICENCE.lodepng.txt
Templates/docker_RG35XX/01_Sample_Project/project/scripts/: build_internal.sh  bundler.sh
Templates/docker_RG35XX/01_Sample_Project/project/source/: main.cpp
Templates/docker_RG35XX/sample_project/project/: CMakeLists.txt  NGN_FileSystem  NGN_FileSystem_Raspbian  build_game.bat  clean_temp_dirs.bat  clean_temp_dirs.sh  make_package.sh
Templates/docker_Raspberry_Pi/00_Project_Template/project/: CMakeLists.txt  build_game.bat
Templates/docker_Raspberry_Pi/00_Project_Template/project/scripts/: build_internal.sh  bundler.sh
Templates/docker_Raspberry_Pi/project_template/project/: CMakeLists.txt  build_game.bat  build_game.sh
Templates/docker_Raspberry_Pi/sample_project/project/: CMakeLists.txt  build_game.bat  build_game.sh  data.pkg
Tools/NGN_CollisionMap/: CMakeLists.txt  NGN_CollisionMap.cbp  build_tool.bat  build_tool.sh
Tools/NGN_CollisionMap/_source/source/: main.cpp
Tools/NGN_CollisionMap/linux/: NGN_CollisionMap
Tools/NGN_CollisionMap/source/: collision_map.cpp  collision_map.h  convert_to_map.cpp  convert_to_map.h  defines.h  fs_manager.cpp  fs_manager.h  main.cpp  map.cpp  map.h  message.cpp  message.h
(+806 files in other folders)
